# cocalc

./: .gitignore  .gitmodules  .travis-install-hub.sh  .travis-install-services.sh  .travis-test-services.sh  .travis-test.sh  .travis.yml  AGENTS.md  AUTHORS.md  DEVELOPMENT.md  INSTALL.md  LICENSE.md  LICENSE.tmpl  README  README.md  README.txt  SECURITY.md  backend.py  backend2.py  backend3.js  backend_spawner.py  client.py  competitors.txt  compute_backend.py  compute_frontend.py  compute_model.py  deleted  devel.md  flash_policy.py  flask_misc.py  frontend.py  index.js  install_on_smc.sh  misc.py  model.py  package-lock.json  package.json  popen_http.py  session.py  socketiotest.py  (+10 more)
.claude/: settings.json
.github/: sizewatcher.yml
.jules/: sentinel.md
doc/: user.tex
docs/: Issue Triage.md  README.md  Random Notes.md  STYLE.md  Style guide.md  Understanding Editors.md  Writing Components.md  agents.md  architecture.md  backup-indexes.md  backup-secrets.md  buckets.md  conat.md  http-proxy.md  launchpad.md  long-running-operations.md  membership.md  memory-leak-hunting-guide.md  overview.md  project-backups.md  project-move.md  project-rootfs.md  pull_request_template.md  ssh-key-distribution.md  ssh-proxy.md  sync.md  todo.md  upgrading-packages.md
notes/: .diary.txt.smc-chat  .final_push.txt.sage-chat  .final_push.txt.smc-chat  1.0.md  2014-01-07-sd56.md  2014-07.tasks  2015-05-20-billing.md  2015-05-20-billing.sagews  2015-05-20-thoughts.md  SMCinSMC.md  admin.md  analyze.sagews  andyissues.tasks  april2014.md  aug2013-push.md  btrfs.md  business.md  competitors.txt  course2.tasks  daily-ops.md  db-file-consistency.sagews  dec2013-ha-images.md  dec2013.md  demo_users.txt  deployment.txt  devel.txt  diary.txt  diary2.md  docs.txt  feb2014.md  final_push-part2.md  final_push-part2.txt  final_push.md  final_push.txt  future-ideas.md  hosting_options.txt  ideas.txt  jan2014.md  july2013-push.md  layers.md  (+31 more)
old/: done.txt
one/: README  deleted  misc.py  startall.py  testall  workspace_server.py
salvus/: .hub.coffee.smc-chat  .istanbul.yml  LICENSE.md  admin.py  auth.py  authdemo.py  backup.coffee  build.py  bup_server  bup_server.coffee  cassandra.coffee  cassandra.py  client.coffee  client_browser.coffee  client_node.coffee  cloud.coffee  coffee-coverage-loader.js  coffeelint.json  compute  compute.coffee  compute_server  compute_server.coffee  config1.py  config2.py  config3.py  console_server  console_server.coffee  console_server_child.coffee  console_session  console_session.coffee  daemon.py  db.py  db_schema.cql  deleted  deploy.py  deploy.txt  deploy1.py  deploy2.py  diffsync.coffee  docs.coffee  (+104 more)
sandbox/: frontend_zmq.py  session_zmq.py
session/: README  frontend_db_model.py  http_sage_session.py  http_session.py  http_session_frontend.py  http_session_service.py  pytest.ini  session_service.py  session_zmq.py  simple.py
src/: .eslintrc.js  .local_hub.coffee.smc-chat  AGENTS.md  CLAUDE.md  JUPYTER_SINGLE_FILE_ANALYSIS.md  README.md  admin.py  build.py  c.coffee  c.js  cocalc.code-workspace  console_server  data  globals.d.ts  go  go-hub  go-share.py  go1  index.coffee  index.ejs  index.jade  install.py  jest.config.js  js.coffee  lerna.json  lti-deep-linking.tsx  misc.py  misc_test.py  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.js  requirements.txt  s  setupEnzyme.ts  smc-env  smc-webapp-css.coffee  smc-webapp-lib.coffee  tsconfig.json  (+22 more)
src/python/cocalc-api/: DEVELOPMENT.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  uv.toml
src/python/cocalc-api/docs/: index.md
src/python/cocalc-api/docs/api/: database.md  jupyter.md  messages.md  organizations.md  project.md  projects.md  system.md
src/python/cocalc-api/scripts/: ci-create-project.py  ci-test-oauth2.py
src/python/cocalc-api/src/cocalc_api/: __init__.py  api_types.py  auth.py  cli.py  cli_gen.py  client.py  hub.py  org.py  project.py  util.py
src/python/cocalc-api/src/cocalc_api/mcp/: DEVELOPMENT.md  README.md  __init__.py  __main__.py  mcp_debug.py  mcp_server.py  server.py
src/python/cocalc-api/src/cocalc_api/mcp/resources/: __init__.py  account_profile.py  file_listing.py
src/python/cocalc-api/src/cocalc_api/mcp/tools/: __init__.py  exec.py  jupyter.py  project_state.py  project_status.py  projects_search.py
src/python/cocalc-api/tests/: README.md  __init__.py  conftest.py  test_hub.py  test_jupyter.py  test_org.py  test_org_basic.py  test_project.py
static/: backend.js  sagews.js
templates/: backend_index.html  client.html  demo1.html  demo2.html  demo3.html  demo4.html  demo5.html
three/: README.md  admin.py  auth.py  backend.py  (+20 more)
(+5976 files in other folders)
